--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && prisma migrate deploy && next build",
+    "postbuild": "prisma migrate deploy",
     "start": "next start",
     "lint": "next lint"
   },
