--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
-DATABASE_URL="file:./dev.db"
+# Recommended for most uses
+DATABASE_URL="postgres://neondb_owner:HGCoyuiqc78X@ep-soft-term-a65nqtg6-pooler.us-west-2.aws.neon.tech/neondb?sslmode=require"
 NEXTAUTH_SECRET="tu-secreto-aqui"
 NEXTAUTH_URL="http://localhost:3000"
